#
#	Changelog of Sandix
#
#	Copyright (C) 2015 Yizhou Shan <shanyizhou@ict.ac.cn>
#
#	This program is free software; you can redistribute it and/or modify
#	it under the terms of the GNU General Public License as published by
#	the Free Software Foundation; either version 2 of the License, or
#	(at your option) any later version.
#
#	This program is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#
#	You should have received a copy of the GNU General Public License along
#	with this program; if not, write to the Free Software Foundation, Inc.,
#	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#

#	[+] = New
#	[M] = Modify

Mon Sep  7 CST 2015
- [+] lib/ctype.c
- [+] include/sandix/ctype.h
- [M] .gitignore
- [M] lib/vsprintf.c


Tue Sep  8 CST 2015
- [+] Changelog
- [+] lib/hexdump.c
- [M] lib/vsprintf.c